# DePIN-Orcha

./: .editorconfig  .env.example  .gitattributes  .gitignore  ACTION_PLAN_MASTER_ROADMAP.md  ACTION_PLAN_PHASE_1.md  ACTION_PLAN_PHASE_2.md  ACTION_PLAN_PHASE_3.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DePIN Orcha - Master Action Plan.md  INDEX.md  LICENSE  PHASE_1_COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_EXECUTION_SUMMARY.md  PHASE_3_EXECUTION_REPORT_FINAL.md  PHASE_3_IMPLEMENTATION_STARTED.md  PHASE_3_LAUNCH_SUMMARY.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_EXECUTION_SUMMARY.md  PHASE_4_IMPLEMENTATION_ROADMAP.md  PHASE_4_LAUNCH_SUMMARY.md  PORT_MIGRATION_SUMMARY.md  PROJECT_PROGRESS_JANUARY_2026_PHASE3.md  PROJECT_PROGRESS_JANUARY_2026_PHASE4_COMPLETE.md  PROJECT_STATUS_JANUARY_2026.md  README.md  apply_migration.py  apply_migration.rs  bootstrap_admin.ps1  check_db.py  create_admin_key.py  depin_orcha.db  docker-compose.yml  pyproject.toml  requirements.txt  (+1 more)
config/: default.toml  prometheus.yml
docker/: Dockerfile.ml-engine  Dockerfile.orchestrator  Dockerfile.ui
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ORCHESTRATION_API_REFERENCE.md  PHASE_2_PROTOCOLS.md  PHASE_3_PLANNING.md  PHASE_4_API_REFERENCE.md  TASK_3_COMPLETE.md
migrations/: 20260115000001_create_api_keys.sql  20260115000002_add_rate_limit_unique_constraint.sql
models/: .gitkeep
scripts/: deploy.sh  health-check.sh  setup-env.sh
src/: lib.rs
src/api/: auth.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  websocket.rs
src/core/: config.rs  db.rs  error.rs  main.rs  metrics.rs  protocols.rs
src/core/protocols/: base.rs
src/db/: mod.rs  models.rs  queries.rs
src/ml/api/: __init__.py  main.py
src/ml/models/: __init__.py
src/ml/utils/: __init__.py
src/orchestration/: coordinator.rs  mod.rs  monitor.rs  optimizer.rs  reallocation.rs
src/protocols/: golem.rs  grass.rs  mod.rs  storj.rs  streamr.rs
src/scheduler/: mod.rs
src/ui/: index.html  package.json  tailwind.config.js  vite.config.ts
src/ui/src/: App.tsx  index.css  main.tsx
