[package]
name = "depin-orcha"
version = "0.1.0"
edition = "2021"
authors = ["DePIN Orcha Contributors"]
description = "Intelligent Multi-Protocol DePIN Orchestrator"
repository = "https://github.com/iamthegreatdestroyer/DePIN-Orcha"
license = "MIT"
readme = "README.md"

[[bin]]
name = "depin-orcha"
path = "src/bin/main.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-ws = "0.2"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }

# Logging & Configuration
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
config = "0.13"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Authentication & Rate Limiting
jsonwebtoken = "9.3"
bcrypt = "0.15"
governor = "0.6"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
